# uidmapshift

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/uidmapshift/: __init__.py  _version.py  shifter.py
