[project]
name = "uidmapshift"
version = "0.1.0"
description = "A utility to shift UID/GID of file hierarchies (with ACL support)"
readme = "README.md"
authors = [
    { name = "Quentin Minster Picavet", email = "quentin@minster.io" }
]
requires-python = ">=3.13"
dependencies = [
    "pylibacl>=0.7.3",
]

[project.scripts]
uidmapshift = "uidmapshift:main"

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.pyright]
executionEnvironments = [{ root = "src" }]
venvPath = "."
venv = ".venv"
